[package]
name = "ckb-dyn-lock"
version = "0.1.8"
authors = ["zkzkp <zk.sec@outlook.com>"]
edition = "2018"
license = "MIT"
description = "ckb dyn lock lib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-std = { version = "0.7", optional = true }
includedir = { version = "0.6", optional = true }
phf = { version = "0.8", optional = true }
sha3 = {version = "0.8", optional = true }
ckb-tool = { version = "0.2", optional = true }

[build-dependencies]
includedir_codegen = { version = "0.6", optional = true }
blake2b-rs = "0.2"
faster-hex = "0.4"

[features]
default = ["dynamic_loading"]
lock_binary = ["includedir", "phf", "includedir_codegen"]
test_tool = ["sha3", "ckb-tool"]
dynamic_loading = ["ckb-std"]
